--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -13,7 +13,7 @@
                     <button>Willingdon Avenue to Wayburne Drive</button>
                     <button>CARI Building to Wayburne Drive</button>
                 </div>
-                <button class="dropdown-btn">Transit Information
+                <button class="dropdown-btn" onclick="transit()">Transit Information
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container">
@@ -59,11 +59,8 @@
         </div>
     </div>
     <div class="col-sm-10">
-        <img src="/media/bcitmap.png" alt="BCIT Burnaby Campus Map">
-        {{!-- <form action="/main_menu" method="GET">
-            <button type="submit" name="mainMenu" id="main-menu-btn">Main Menu</button>
-        </form> --}}
-         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
+        {{>overlay}}
+        <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
 
