--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -10,6 +10,7 @@
     <script src="/js/script.js"></script>
     <script src="/js/navigation.js"></script>
     <script src="/js/highlight.js"></script>
+    <script src="/js/basic.js"></script>
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
     <!--<script src="http://www.outsharked.com/scripts/jquery.imagemapster.js"></script>-->
     {{#if startCSS}}
