--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -1,7 +1,7 @@
 <!-- Need to remove this inline styling eventually -->
 <div style="overflow: auto;">
     <div id="map" style="display: inline-block;">
-        <div id="food_map" style="position: relative; left: 0; top: 0;">
+        <div id="map_container" style="position: relative; left: 0; top: 0;">
             <img id="image" src="/media/burnaby_campus_map.png" usemap="#image-map">
             <map id="image_map" name="image-map">
             <!--            NE Buildings-->
