fixed tooltip/overlay issue

--- a/views/other-key-places.hbs
+++ b/views/other-key-places.hbs
@@ -38,7 +38,7 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container">
-                    <button id="Games" onclick="selectKeyPlaces(this.value)" value="SE16">Ping Pong & Foosball</button>
+                    <button id="Games" onclick="selectKeyPlaces(this.value)" value="SE16">Ping Pong &amp; Foosball</button>
                     <button id="Pool" onclick="selectKeyPlaces(this.value)" value="SE16">Pool in the Habitat Pub</button>
                     <button id="Events" onclick="selectKeyPlaces(this.value)" value="SE02">Events in the Great Hall</button>
                 </div>
