minor fixes to previous commit

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -10,7 +10,7 @@
             <img id="handicap_overlay" src="/media/overlays/handicap_overlay.png" usemap="#image-map">
             <img id="security_overlay" src="/media/overlays/security_overlay.png" usemap="#image-map">
             <img id="student_parking_overlay" src="/media/overlays/student_parking_overlay.png" usemap="#image-map">
-            <img id="visitor_parking_overlay" src="/media/overlays/visitor_parking_overlay.png" usemap="#image-map">
+            <img id="visitor_parking_overlay" src="/media/overlays/visitor_parking_overlay.png" >
 
             <img id="image" src="/media/burnaby_campus_map.png">
 
@@ -74,8 +74,6 @@
                 <area target="" class="CARI" full="CARI Building" id="CARI" building="CARI" alt="CARI" title="CARI" href="#" coords="2437,1306,2487,1267,2530,1317,2570,1317,2638,1249,2695,1303,2723,1271,2817,1364,2709,1468,2688,1446,2630,1503,2573,1439,2534,1439,2484,1493,2437,1450,2494,1396,2491,1360" shape="poly">
             </map>
 
-            
-            
         </div>
     </div>
 </div>
