fixed another mistake

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -10,7 +10,7 @@
             <img id="handicap_overlay" src="/media/overlays/handicap_overlay.png" usemap="#image-map">
             <img id="security_overlay" src="/media/overlays/security_overlay.png" usemap="#image-map">
             <img id="student_parking_overlay" src="/media/overlays/student_parking_overlay.png" usemap="#image-map">
-            <img id="visitor_parking_overlay" src="/media/overlays/visitor_parking_overlay.png" >
+            <img id="visitor_parking_overlay" src="/media/overlays/visitor_parking_overlay.png" usemap="#image-map">
 
             <img id="image" src="/media/burnaby_campus_map.png">
 
