added some bus stops

--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -28,6 +28,9 @@
                     <button onclick="selectTransit(this.value)" value="WillingdonWB">Westbound Canada Way @ Willingdon Ave</button>
                     <button onclick="selectTransit(this.value)" value="BetaE">Eastbound Canada Way @ Beta Ave</button>
                     <button onclick="selectTransit(this.value)" value="BetaW">Westbound Canada Way @ Beta Ave</button>
+                    <button onclick="selectTransit(this.value)" value="MathissiE">Eastbound Sanderson Way @ Mathissi Ave</button>
+                    <button onclick="selectTransit(this.value)" value="WillingdonED">Eastbound Deer Lake Parkway @ Willingdon Ave</button>
+                    <button onclick="selectTransit(this.value)" value="WayburneWD">Westbound Deer Lake Parkway @ Waybburne Dr</button>
                 </div>
                 <button class="dropdown-btn">Navigating Campus
                     <i class="fa fa-caret-down"></i>
