--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -62,8 +62,8 @@
             <!--            CARI Building-->
                 <area target="" class="CARI" full="CARI Building" id="CARI" building="CARI" alt="CARI" title="CARI" href="#" coords="2437,1306,2487,1267,2530,1317,2570,1317,2638,1249,2695,1303,2723,1271,2817,1364,2709,1468,2688,1446,2630,1503,2573,1439,2534,1439,2484,1493,2437,1450,2494,1396,2491,1360" shape="poly">
             <!--            Bus Stops-->
-                <area target="" class="bus" full ="" id="WayburneW" building="WayburneW" alt="WayburneW" title="WayburneW" href="#" coords="131,21,171,64" shape="rect">
-                <area target="" class="bus" full ="" id="BetaE" building="BetaE" alt="BetaE" title="BetaE" href="#" coords="35,186,74,229" shape="rect">
+                <area target="" class="bus" full ="" id="BetaE" building="BetaE" alt="BetaE" title="BetaE" href="#" coords="131,21,171,64" shape="rect">
+                <area target="" class="bus" full ="" id="BetaW" building="BetaW" alt="BetaW" title="BetaW" href="#" coords="35,186,74,229" shape="rect">
                 <area target="" class="bus" full ="" id="WillingdonWB" building="WillingdonWB" alt="WillingdonWB" title="WillingdonWB" href="#" coords="24,854,63,894" shape="rect">
                 <area target="" class="bus" full ="" id="WillingdonEB" building="WillingdonEB" alt="WillingdonEB" title="WillingdonEB" href="#" coords="88,1153,124,1192" shape="rect">
                 <area target="" class="bus" full ="" id="CanadaN" building="CanadaN" alt="CanadaN" title="CanadaN" href="#" coords="260,1229,303,1265" shape="rect">
