--- a/public/css/other-key-places-stylesheet.css
+++ b/public/css/other-key-places-stylesheet.css
@@ -34,6 +34,9 @@ body {
     vertical-align: bottom;
     margin-top: 100px;
     margin-right: 30px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
 }
 
 .col-sm-2 {
@@ -164,7 +167,7 @@ body {
 
 #details_box {
   position: absolute;
-  bottom: 125px;
+  bottom: 0px;
   background-color: white;
 
 }
