--- a/views/other-key-places.hbs
+++ b/views/other-key-places.hbs
@@ -12,7 +12,7 @@
                     <button id="AllDayBreakfast" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE12">All-Day Breakfast &amp; Lunch</button>
                     <button id="AustinGrillService" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE12">Austin Grill Express</button>
                     <button id="BoosterJuice" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE14">Booster Juice</button>
-                    <button id="CampusCafe" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE12">Campus Cafe</button>
+                    <button id="CampusCafe" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE12">Campus Café</button>
                     <button id="CARICafeteria" onclick="selectKeyPlaces(this.value, this.innerText)" value="CARI">CARI Cafeteria</button>
                     <button id="ETCCafe" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE01">E.T.C. Café</button>
                     <button id="FuseCafe" onclick="selectKeyPlaces(this.value, this.innerText)" value="SE01">Fuse Café</button>
