--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -13,7 +13,7 @@
                     <button>Willingdon Avenue to Wayburne Drive</button>
                     <button>CARI Building to Wayburne Drive</button>
                 </div>
-                <button class="dropdown-btn" onclick="toggleDisplay(this.value)" value="bus_stops_overlay">Transit Information
+                <button class="dropdown-btn" onclick="toggleDropdown(this), toggleDisplay(this)" value="bus_stops_overlay">Transit Information
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container">
@@ -44,11 +44,11 @@
                     <button>Trades Buildings</button>
                     <button>Accessibility Routes</button>
                 </div>
-                <button class="dropdown-btn">Parking Information
+                <button class="dropdown-btn" onclick="toggleDropdown(this)">Parking Information
                     <i class="fa fa-caret-down"></i>
                 </button>
-                <div class="dropdown-container">
-                    <button onclick="toggleDisplay(this.value),selectParking(this.value)" value="student_parking_overlay">Student Parking</button>
+                <div class="dropdown-container" >
+                    <button onclick="toggleDisplay(this),selectParking(this.value)" value="student_parking_overlay">Student Parking</button>
                     <button>Employee Parking</button>
                     <button>Visitor Parking</button>
                     <button>Accessible Parking</button>
