fixed transit function calls

--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -22,7 +22,7 @@
                     <button onclick="selectTransit(this.value)" value="GoardN">Northbound Willingdon Ave @ Goard Way</button>
                     <button onclick="selectTransit(this.value)" value="GoardS">Southbound Willingdon Ave @ Goard Way</button>
                     <button onclick="selectTransit(this.value)" value="SandersonN">Northbound Willingdon Ave @ Sanderson Way</button>
-                    <button onclick="selectTransit(this.value)" value="SanderSonS">Southbound Willingdon Ave @ Sanderson Way</button>
+                    <button onclick="selectTransit(this.value)" value="SandersonS">Southbound Willingdon Ave @ Sanderson Way</button>
                     <button onclick="selectTransit(this.value)" value="DeerN">Northbound Willingdon Ave @ Deer Lake Parkway</button>
                     <button onclick="selectTransit(this.value)" value="WillingdonEB">Eastbound Canada Way @ Willingdon Ave</button>
                     <button onclick="selectTransit(this.value)" value="WillingdonWB">Westbound Canada Way @ Willingdon Ave</button>
