script updates, new bus stop overlay, minor fixes

--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -149,23 +149,8 @@
     </div>
 </div>
 
-<script>
-    /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-    var dropdown = document.getElementsByClassName("dropdown-btn");
-    var i;
 
-    for (i = 0; i < dropdown.length; i++) {
-        dropdown[i].addEventListener("click", function () {
-            this.classList.toggle("active");
-            var dropdownContent = this.nextElementSibling;
-            if (dropdownContent.style.display === "block") {
-                dropdownContent.style.display = "none";
-            } else {
-                dropdownContent.style.display = "block";
-            }
-        });
-    }
-</script>
 {{!-- <script src='https://unpkg.com/panzoom@9.2.4/dist/panzoom.min.js'></script> --}}
 <script src="/panzoom/panzoom.js"></script>
 <script src="js/zoom.js"></script>
+<script src="js/script.js"></script>
