--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -91,3 +91,12 @@
         </div>
     </div>
 </div>
+<div id="details_box" class="col-sm-6">
+    <h3 id="details_title"></h3>
+    <p id="details_info"></p>
+    <p id="details_link"></p>
+</div>
+<div class="col-sm-6">
+</div>
+<script src="/panzoom/panzoom.js"></script>
+<script src="js/zoom.js"></script>
