--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -86,6 +86,49 @@
                 <area target="" class="bus" full ="" id="DeerN" building="DeerN" alt="DeerN" title="DeerN" href="#" coords="3483,1045,3522,1088" shape="rect">
                 <area target="" class="bus" full ="" id="WillingdonED" building="WillingdonED" alt="WillingdonED" title="WillingdonED" href="#" coords="3665,943,3708,982" shape="rect">
                 <area target="" class="bus" full ="" id="WayburneWD" building="WayburneWD" alt="WayburneWD" title="WayburneWD" href="#" coords="3901,191,3941,231" shape="rect">
+
+            <!-- Parking lots -->
+                <area target="_self" alt="LOT A" title="LOT A" href="" coords="776,106,955,285" shape="rect">
+                <area target="" alt="LOT 7" title="LOT 7" href="" coords="1241,118,1359,119,1603,180,1714,177,1714,252,1871,259,1857,388,1349,381,1349,216,1241,215" shape="poly">
+                <area target="" alt="LOT B" title="LOT B" href="" coords="983,119,1234,205" shape="rect">
+                <area target="" alt="LOT 5" title="LOT 5" href="" coords="1338,440,1435,673" shape="rect">
+                <area target="" alt="LOT 12" title="LOT 12" href="" coords="1463,431,1571,431,1567,477,1585,506,1596,635,1563,599,1560,517,1513,470,1485,470,1485,499,1463,506" shape="poly">
+                <area target="" alt="LOT D" title="LOT D" href="" coords="1936,214,2190,367" shape="rect">
+                <area target="" alt="LOT F" title="LOT F" href="" coords="2226,212,2487,363" shape="rect">
+                <area target="" alt="LOT E" title="LOT E" href="" coords="1911,132,2501,186" shape="rect">
+                <area target="" alt="LOT G" title="LOT G" href="" coords="2530,129,2863,175" shape="rect">
+                <area target="" alt="LOT 26" title="LOT 26" href="" coords="3304,155,3393,237" shape="rect">
+                <area target="" alt="LOT V4" title="LOT V4" href="" coords="3504,162,3568,262" shape="rect">
+                <area target="" alt="LOT 27" title="LOT 27" href="" coords="3293,430,3533,472" shape="rect">
+                <area target="" alt="LOT K" title="LOT K" href="" coords="2795,545,2870,749" shape="rect">
+                <area target="" alt="LOT L" title="LOT L" href="" coords="2888,536,2888,761,3182,772,3185,697,3060,539" shape="poly">
+                <area target="" alt="LOT J" title="LOT J" href="" coords="2874,910,2809,810" shape="rect">
+                <area target="" alt="LOT N" title="LOT N" href="" coords="3500,938,2687,934,2684,1009,2512,1031,2340,1059,2147,1153,2154,1181,2365,1095,2523,1067,2695,1049,3160,1052,3167,1024,3504,1024" shape="poly">
+                <area target="" alt="STUDENT HOUSING PARKING" title="STUDENT HOUSING PARKING" href="" coords="2333,976,2344,1048,2530,1015,2673,997,2681,915,2509,933" shape="poly">
+                <area target="" alt="LOT 6" title="LOT 6" href="" coords="1778,1190,2079,1236" shape="rect">
+                <area target="" alt="LOT 6.2" title="LOT 6.2" href="" coords="1843,799,1914,857" shape="rect">
+                <area target="" alt="LOT 9" title="LOT 9" href="" coords="1606,1065,1793,1176" shape="rect">
+                <area target="" alt="LOT 4" title="LOT 4" href="" coords="1503,1193,1728,1240" shape="rect">
+                <area target="" alt="LOT V1" title="LOT V1" href="" coords="1023,1178,1413,1235" shape="rect">
+                <area target="" alt="LOT 15" title="LOT 15" href="" coords="464,1192,754,1246" shape="rect">
+                <area target="" alt="LOT 22" title="LOT 22" href="" coords="439,1058,586,1176" shape="rect">
+                <area target="" alt="LOT Q" title="LOT Q" href="" coords="160,965,396,1180" shape="rect">
+                <area target="" alt="LOT 23" title="LOT 23" href="" coords="149,888,396,959" shape="rect">
+                <area target="" alt="LOT 21" title="LOT 21" href="" coords="196,780,400,881" shape="rect">
+                <area target="" alt="LOT 21.1" title="LOT 21.1" href="" coords="128,532,160,747" shape="rect">
+                <area target="" alt="LOT 21.2" title="LOT 21.2" href="" coords="353,562,407,639" shape="rect">
+                <area target="" alt="LOT 21.3" title="LOT 21.3" href="" coords="221,389,310,471" shape="rect">
+                <area target="" alt="LOT 21.4" title="LOT 21.4" href="" coords="407,527,339,484" shape="rect">
+                <area target="" alt="LOT v2" title="LOT v2" href="" coords="221,478,317,521" shape="rect">
+                <area target="" alt="LOT 24" title="LOT 24" href="" coords="146,393,210,493" shape="rect">
+                <area target="" alt="LOT 25" title="LOT 25" href="" coords="403,265,403,358,160,354,160,251,160,107,303,107,296,168,239,168,235,129,185,129,185,265" shape="poly">
+                <area target="" alt="LOT 20" title="LOT 20" href="" coords="421,981,457,984,461,902,643,906,647,866,582,859,561,816,421,816" shape="poly">
+                <area target="" alt="LOT V3" title="LOT V3" href="" coords="1603,418,1742,482" shape="rect">
+                <area target="" alt="LOT 29" title="LOT 29" href="" coords="2874,1205,2501,1219,2369,1346,2373,1489,2351,1532,2441,1513,2408,1420,2462,1366,2426,1330,2444,1269,2509,1252,2555,1266,2881,1259" shape="poly">
+                <area target="" alt="LOT S" title="LOT S" href="" coords="2817,1285,2885,1349" shape="rect">
+                <area target="" alt="LOT S2" title="LOT S2" href="" coords="2294,1382,2365,1460" shape="rect">
+                <area target="" alt="LOT 28" title="LOT 28" href="" coords="3790,148,3919,220" shape="rect">
+                <area target="" alt="LOT 28.1" title="LOT 28.1" href="" coords="3827,243,3902,279,3873,369,3730,419,3594,401,3612,336,3658,347,3744,354,3798,347,3848,294" shape="poly">
             </map>
 
         </div>
